# python-extension-project

./: CMakeLists.txt  README.md  myextension.code-workspace  pyproject.toml  vcpkg.json
bindings/: CMakeLists.txt  myextension_py.cpp
core/: CMakeLists.txt
core/include/myextension/: myextension.hpp
core/src/: myextension.cpp
sample/: sample_myextension.py  sample_utils.py
src/myproject/: example_cli.py
src/myproject/utils/: path.py
tests/: utils_test.py
tests/cxx/: CMakeLists.txt  test_core.cpp
tests/python/: test_myextension.py
